UPD connexion inscription mobile montre erreurs correctement

--- a/html/assets/SCSS/modal.sass
+++ b/html/assets/SCSS/modal.sass
@@ -161,6 +161,8 @@
 
 
 @media screen and (max-width: general.$max-width-tablette)
+    .alert-popup
+        display: none
     .modal-register-content
         position: fixed
         overflow-y: hidden
